// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly, count all 1`] = `
<div
  id="feedreader-entry-counts"
>
  <h2>
    All (4)
  </h2>
  <div>
    <h3>
      Group One (2)
    </h3>
    <div>
      <p
        class=""
      >
        Feed One (2)
      </p>
    </div>
    <h3>
      Group Two (2)
    </h3>
    <div>
      <p
        class=""
      >
        Feed Two (2)
      </p>
    </div>
  </div>
</div>
`;

exports[`renders correctly, count unread 1`] = `
<div
  id="feedreader-entry-counts"
>
  <h2>
    All (2)
  </h2>
  <div>
    <h3>
      Group One (2)
    </h3>
    <div>
      <p
        class=""
      >
        Feed One (2)
      </p>
    </div>
    <h3>
      Group Two 
    </h3>
    <div>
      
    </div>
  </div>
</div>
`;
